--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs
+/ConsoleApp1/.vs/ConsoleApp1
+/ConsoleApp1/ConsoleApp1/obj
